--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,29 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/eye2.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/icon64.ico" />
+    <title>Trust-o-Meter</title>
     <meta
       name="description"
       content="Let's forge friendship together!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- PWA -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="theme-color" content="#9ddcdc" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Trust-o-Meter</title>
+    <!-- iOS Safari manifest props -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon48.png" sizes="48x48" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon64.png" sizes="64x64" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon96.png" sizes="96x96" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon144.png" sizes="144x144" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon256.png" sizes="256x256" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon384.png" sizes="384x384" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon512.png" sizes="512x512" />
+
+    <!-- IE manifest props -->
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/icons/icon144.png">
+    <meta name="msapplication-TileColor" content="#9ddcdc">
+    <!-- EOF PWA -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
